--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
@@ -27,7 +27,12 @@
     "You can add image, diagrams, whatever you need to ensure that you understand the concepts below.\n",
     "\n",
     "### Input Layer:\n",
-    "### Hidden Layer:\n",
+    "     -      Recieves input from the dataset. The 'first' or leftmost layer in a neural network. Typically node maps are drawn with one input for each of the different inputs/featur        es/columns in a dataset. \n",
+    "\n",
+    "### Hidden Lay\n",
+    "\n",
+    "    -   Refers to all the layers between the input and output layers. \"Deep learning\" effectively refers to using a neural network that has muliple hidden layers.\n",
+    "er:\n",
     "### Output Layer:\n",
     "### Neuron:\n",
     "### Weight:\n",
